--- a/src/test.html
+++ b/src/test.html
@@ -2,19 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS</title>
-        <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>CSS-Начальный уровень</title>
+    
 </head>
 <body>
-   <div class="example-block"> </div>
- <ul class="list">
-     <li>lorem</li>
-     <li>lorem</li>
-     <li>lorem</li>
-     <li>lorem</li>
-     <li>lorem</li>
- </ul>
+   
+
+
+
     
 </body>
 </html>
